--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "node-mailer": "^0.1.1"
-  },
   "devDependencies": {
     "aws-sdk": "^2.207.0"
+  },
+  "dependencies": {
+    "nodemailer": "^4.6.2"
   }
 }
